--- a/package.json
+++ b/package.json
@@ -1,15 +1,8 @@
 {
-  "name": "minesweeper",
+  "name": "W10D4",
   "version": "1.0.0",
   "description": "",
-  "main": "minesweeper.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --watch --mode=development"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "main": "webpack.config.js",
   "dependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
@@ -22,5 +15,21 @@
   "devDependencies": {
     "webpack": "^5.36.0",
     "webpack-cli": "^4.6.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch --mode=development"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/philowe94/W10D4.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  
+  "bugs": {
+    "url": "https://github.com/philowe94/W10D4/issues"
+  },
+  "homepage": "https://github.com/philowe94/W10D4#readme"
 }
