--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
   "devDependencies": {
